--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -15,8 +15,8 @@
   with_items:
     - { name: "net.ipv4.ip_nonlocal_bind", value: 1}
     - { name: "net.unix.max_dgram_qlen", value: 128}
-    - { name: "net.bridge.bridge-nf-call-iptables", value: 1}
-    - { name: "net.bridge.bridge-nf-call-ip6tables", value: 1}
+    # - { name: "net.bridge.bridge-nf-call-iptables", value: 1}
+    # - { name: "net.bridge.bridge-nf-call-ip6tables", value: 1}
     - { name: "net.ipv4.conf.all.rp_filter", value: 0}
     - { name: "net.ipv4.conf.default.rp_filter", value: 0}
     - { name: "net.ipv4.ip_forward", value: 0}
