--- a/roles/galera/tasks/register.yml
+++ b/roles/galera/tasks/register.yml
@@ -1,6 +1,11 @@
 ---
 - name: Creating haproxy mysql user
 
-  shell: mysql -u{{ mariadb_user }} -p{{ mariadb_passwd }} -e "grant all privileges on *.* to haroxyp@'%' identified by '';"
+  shell: mysql -u{{ mariadb_user }} -p{{ mariadb_passwd }} -e "{{ item }}" 
+  with_items:
+
+    - "CREATE USER 'haproxy'@'%' IDENTIFIED BY '';"
+    - "flush privileges;"
+
   run_once: True
 
